Get rid of Direction.java