@@ -13,7 +13,7 @@ import com.maddyhome.idea.vim.extension.ExtensionHandler;
 import com.maddyhome.idea.vim.newapi.IjVimEditorKt;
 import com.maddyhome.idea.vim.state.mode.Mode;
 import com.maddyhome.idea.vim.state.mode.SelectionType;
-import com.zyurkalov.ideavim.syntaxtreejumper.Direction;
+import com.zyurkalov.ideavim.syntaxtreejumper.MotionDirection;
 import com.zyurkalov.ideavim.syntaxtreejumper.Offsets;
 import com.zyurkalov.ideavim.syntaxtreejumper.adapters.ElementWithSiblings;
 import com.zyurkalov.ideavim.syntaxtreejumper.adapters.SyntaxNode;
@@ -31,9 +31,9 @@ import java.util.List;
  */
 public class MoveSiblingHandler implements ExtensionHandler {
 
-    private final Direction direction;
+    private final MotionDirection direction;
 
-    public MoveSiblingHandler(Direction direction) {
+    public MoveSiblingHandler(MotionDirection direction) {
         this.direction = direction;
     }
 
@@ -77,6 +77,7 @@ public class MoveSiblingHandler implements ExtensionHandler {
             SyntaxNode targetSibling = switch (direction) {
                 case BACKWARD -> elementWithSiblings.previousSibling();
                 case FORWARD -> elementWithSiblings.nextSibling();
+                case EXPAND, SHRINK -> null; // TODO: what shall I do here?
             };
 
             if (targetSibling == null) {
@@ -170,8 +171,9 @@ public class MoveSiblingHandler implements ExtensionHandler {
         );
 
         LogicalPosition targetPosition = switch (direction) {
-            case FORWARD -> caretPositions.get(caretPositions.size() - 1); // Last position
-            case BACKWARD -> caretPositions.get(0); // First position
+            //TODO: come up with better options for shirking and expanding
+            case FORWARD, EXPAND -> caretPositions.getLast(); // Last position
+            case BACKWARD, SHRINK -> caretPositions.getFirst(); // First position
         };
 
         editor.getScrollingModel().scrollTo(targetPosition, ScrollType.MAKE_VISIBLE);
